# hippoe

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
core/: Cargo.toml
core/benches/: hippocampus.rs  quality.rs  storage.rs
core/examples/: basic_memory.rs  embedding_demo.rs  hippocampus_demo.rs  query_builder.rs  spreading_activation.rs
core/src/: config.rs  embedding.rs  error.rs  hippocampus.rs  lib.rs  types.rs
core/src/decay/: curve.rs  history.rs  mod.rs
core/src/embedding/: fastembed.rs  mod.rs  ollama.rs  openai.rs
core/src/memory/: graph.rs  links.rs  memory.rs  mod.rs  trace.rs
core/src/recall/: mod.rs  query.rs  reconsolidation.rs  result.rs  scorer.rs  spread.rs  strategy.rs  temporal.rs
core/src/storage/: common.rs  in_memory.rs  mod.rs  postgres.rs  redis.rs  sqlite.rs
