[workspace]
resolver = "3"
members = ["core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Deni Andreawan Kusuma"]
license = "Apache-2.0"
description = "Cognitive memory system based on hippocampus research"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
