[package]
name = "hippoe-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "hippocampus"
harness = false
