[package]
name = "hippoe-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
bincode = { version = "1", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio"], optional = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
sqlite = ["dep:sqlx", "sqlx/sqlite", "bincode"]
redis = ["dep:redis", "bincode", "futures"]
postgres = ["dep:sqlx", "sqlx/postgres", "bincode"]

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "hippocampus"
harness = false

[[bench]]
name = "storage"
harness = false
