[package]
name = "hippoe-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
bincode = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }

[features]
default = []
sqlite = ["dep:sqlx", "sqlx/sqlite", "dep:bincode"]
redis = ["dep:redis", "dep:bincode", "dep:futures"]
postgres = ["dep:sqlx", "sqlx/postgres", "dep:bincode"]

[[bench]]
name = "hippocampus"
harness = false

[[bench]]
name = "storage"
harness = false
